fix: comprehensive security hardening and scalability improvements
Security (Phase 0):
- Fix timing attacks: replace String.equals() with MessageDigest.isEqual()
  in OTP verification, Click.uz HMAC signature, and Payme webhook auth
- Remove hardcoded JWT secret default — app now requires JWT_SECRET env var
- Add password strength validation (uppercase + lowercase + digit required)
- Externalize CORS origins to configurable property
- Add bulk operation role validation (ADMIN only)
- Add @Size/@Pattern input validation to VacancyCreateRequest and EmployerRegisterRequest

Scalability (Phase 1):
- Add ShedLock distributed locking for all 10 scheduled tasks across 6 schedulers
- Create Liquibase migration for shedlock table + soft-delete partial indexes
- Fix unbounded findAll() in ChurnPredictionService and EmployerReportScheduler
  with paginated batch processing
- Configure HikariCP pool (20 connections), Redis Lettuce pool, Hibernate
  JDBC batch_size=25 with ordered inserts/updates
- Add Spring Cache Redis configuration
- Configure task scheduling pool (10 threads) and async execution pool (10-50)
- Add ShedLock + Resilience4j dependencies to parent and service POMs

Code Quality:
- Externalize 20+ hardcoded magic numbers in FraudDetectionService,
  CandidateMatchingService, and ChurnPredictionService to application.yml
- Fix recursive referral code generation (max 10 attempts + UUID fallback)
- Replace synchronized SMS token refresh with double-checked locking
- Replace manual JSON string concatenation in NotificationService with ObjectMapper

https://claude.ai/code/session_01DMBSwrfvW2KRN6z1ocaBzz